Java 8 version Compatibility Issue